cmake_minimum_required(VERSION 3.14)
project(CPPTestor)

set(CMAKE_CXX_STANDARD 14)
set (CMAKE_CXX_FLAGS "-fno-elide-constructors")

add_executable(rValueRef rValueRef.cpp)
add_executable(constructor constructor.cpp)
add_executable(template templatePoly.cpp)
add_executable(virtualInherit virtualInherit.cpp)
add_executable(vptr vptr.cpp)
add_executable(vtable vtable.cpp)
add_executable(refField refField.cpp)
add_executable(explicit explicit.cpp)
add_executable(intellijPtr intellijPtr.cpp)
add_executable(initialize initialize.cpp)
add_executable(new new.cpp)
add_executable(static static.cpp)
add_executable(funcJudge funcJudge.cpp)
add_executable(nullptr nullptr.cpp)
add_executable(VirtualClass VirtualClass.cpp)