cmake_minimum_required(VERSION 3.14)
project(CPPTestor)

set(CMAKE_CXX_STANDARD 14)
# set (CMAKE_CXX_FLAGS "-fno-elide-constructors")

add_executable(rValueRef rValueRef.cpp)
add_executable(constructor constructor.cpp)
add_executable(template templatePoly.cpp)
add_executable(virtualInherit virtualInherit.cpp)
add_executable(vptr vptr.cpp)
add_executable(vtable vtable.cpp)
add_executable(refField refField.cpp)
add_executable(explicit explicit.cpp)
add_executable(intellijPtr intellijPtr.cpp)
add_executable(initialize initialize.cpp)
add_executable(new new.cpp)
add_executable(static static.cpp)
add_executable(funcJudge funcJudge.cpp)
add_executable(nullptr nullptr.cpp)
add_executable(VirtualClass virtualClass.cpp)
add_executable(emptyClass emptyClass.cpp)
add_executable(struct struct.cpp)
add_executable(operator operator.cpp)
add_executable(initOrder initOrder.cpp)
add_executable(virtualFunc virtualFunc.cpp)
add_executable(intelljPtrImpl intelljPtrImpl.cpp)
add_executable(decltype decltype.cpp)
add_executable(const const.cpp)
add_executable(multiInclude multiInclude.cpp)
add_executable(ztest ztest.cpp)
add_executable(move move.cpp)
add_executable(define define.cpp)
add_executable(intellijPtrCast intellijPtrCast.cpp)
add_executable(inteliijPtrSelf inteliijPtrSelf.cpp)
add_executable(templateRestrictClass templateRestrictClass.cpp)
add_executable(intellijPtrVirtualClass intellijPtrVirtualClass.cpp)
