cmake_minimum_required(VERSION 3.14)
project(CPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(p1duplicateInArray p1duplicateInArray.cpp)
add_executable(p2duplicateInArray p2duplicateInArray.cpp)
add_executable(p3SearchIn2DArray p3SearchIn2DArray.cpp)
add_executable(p4replaceSpaces p4replaceSpaces.cpp)
add_executable(p5printListReversingly p5printListReversingly.cpp)
add_executable(p6buildBinaryTree p6buildBinaryTree.cpp)
add_executable(p7inorderSuccessor p7inorderSuccessor.cpp)
add_executable(p8twoStackQueue p8twoStackQueue.cpp)
add_executable(p9fibonacci p9fibonacci.cpp)
add_executable(nSum nSum.cpp)
add_executable(arrayOverHalf arrayOverHalf.cpp)
add_executable(cutRope cutRope.cpp)
add_executable(midianInDataFlow midianInDataFlow.cpp)
add_executable(maxValueInWindow maxInWindow.cpp)
add_executable(nonRepeatableChar nonRepeatableChar.cpp)
add_executable(rectCover rectCover.cpp)
add_executable(exponent exponent.cpp)
add_executable(reorderArray reorderArray.cpp)
