cmake_minimum_required(VERSION 3.14)
project(CPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(p1duplicateInArray p1duplicateInArray.cpp)
add_executable(p2duplicateInArray p2duplicateInArray.cpp)
add_executable(p3SearchIn2DArray p3SearchIn2DArray.cpp)
add_executable(p4replaceSpaces p4replaceSpaces.cpp)
add_executable(p5printListReversingly p5printListReversingly.cpp)
add_executable(p6buildBinaryTree p6buildBinaryTree.cpp)
add_executable(p7inorderSuccessor p7inorderSuccessor.cpp)
add_executable(p8twoStackQueue p8twoStackQueue.cpp)
add_executable(p9fibonacci p9fibonacci.cpp)
add_executable(p10findMin p10findMin.cpp)
add_executable(p11hasPath p11hasPath.cpp)
add_executable(p13maxProductAfterCutting p13maxProductAfterCutting.cpp)
add_executable(p14NumberOf1 p14NumberOf1.cpp)
add_executable(p15power p15power.cpp)
add_executable(p16deleteNode p16deleteNode.cpp)
add_executable(p17deleteDuplication p17deleteDuplication.cpp)
add_executable(p20reOrderArray p20reOrderArray.cpp)
add_executable(p21findKthToTail p21findKthToTail.cpp)
add_executable(p22entryNodeOfLoop p22entryNodeOfLoop.cpp)
add_executable(p23reverseList p23reverseList.cpp)
add_executable(p24mergeTwoSortedArray p24mergeTwoSortedArray.cpp)
add_executable(p25hasSubtree p25hasSubtree.cpp)
add_executable(p26mirrorBinaryTree p26mirrorBinaryTree.cpp)
add_executable(p27isSymmetric p27isSymmetric.cpp)
add_executable(p28printMatrix p28printMatrix.cpp)
add_executable(p29MinStack p29MinStack.cpp)
add_executable(p30pushPop p30pushPop.cpp)
add_executable(p31printFromTopToBottom p31printFromTopToBottom.cpp)
add_executable(p32printFromTopToBottom p32printFromTopToBottom.cpp)
add_executable(p33printFromTopToBottom p33printFromTopToBottom.cpp)
add_executable(p35findPath p35findPath.cpp)
add_executable(p37convert p37convert.cpp)
add_executable(p38serialize p38serialize.cpp)
add_executable(p39permutation p39permutation.cpp)
add_executable(p40arrayOverHalf p40arrayOverHalf.cpp)
add_executable(p41minks p41minks.cpp)
add_executable(p42medianInDataFlow p42medianInDataFlow.cpp)
add_executable(p43maxSubArray p43maxSubArray.cpp)
add_executable(p45digitAtIndex p45digitAtIndex.cpp)
add_executable(p46printMinNumber p46printMinNumber.cpp)
add_executable(p47getTranslationCount p47getTranslationCount.cpp)
add_executable(p48getMaxValue p48getMaxValue.cpp)
add_executable(p49longestSubstringWithoutDuplication p49longestSubstringWithoutDuplication.cpp)
add_executable(p50getUglyNumber p50getUglyNumber.cpp)
add_executable(p51firstNotRepeatingChar p51firstNotRepeatingChar.cpp)
add_executable(p52firstNotRepeatingCharInFlow p52firstNotRepeatingCharInFlow.cpp)
add_executable(p53inversePairs p53inversePairs.cpp)
add_executable(p54findFirstCommonNode p54findFirstCommonNode.cpp) # 牛逼，这题目
add_executable(p55getNumberOfK p55getNumberOfK.cpp)
add_executable(p56getMissingNumber p56getMissingNumber.cpp)
add_executable(p57getNumberSameAsIndex p57getNumberSameAsIndex.cpp)
add_executable(p58kthNode p58kthNode.cpp)
add_executable(p59treeDepth p59treeDepth.cpp)
add_executable(p60isBalanced p60isBalanced.cpp)
add_executable(p61findNumsAppearOnce p61findNumsAppearOnce.cpp)
add_executable(p62findNumberAppearingOnce p62findNumberAppearingOnce.cpp) # 牛逼，这题目
add_executable(p63findNumbersWithSum p63findNumbersWithSum.cpp)
add_executable(p64findContinuousSequence p64findContinuousSequence.cpp)
add_executable(p65reverseWords p65reverseWords.cpp)
add_executable(p66leftRotateString p66leftRotateString.cpp)
add_executable(p67maxInWindow p67maxInWindow.cpp)
add_executable(p68numberOfDice p68numberOfDice.cpp)
add_executable(p69isContinuous p69isContinuous.cpp)
add_executable(p71maxStockProfits p71maxStockProfits.cpp)
add_executable(p72nSum p72nSum.cpp)
add_executable(p73add p73add.cpp)
add_executable(p74multiply p74multiply.cpp)
add_executable(p75strToInt p75strToInt.cpp)

add_executable(rectCover rectCover.cpp)